<resources>

    <string name="app_name">Waves</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_map">Map</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_recordings">Recordings</string>
    <string name="title_settings">Settings</string>
    <string name="title_station_details">About station</string>
    <string name="title_vote">Vote for station</string>
    <string name="button_vote">Vote</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_play">Play</string>
    <string name="button_favorite">Favorite</string>
    <string name="channel_image">Image</string>
    <string name="description_station_name">Station name</string>
    <string name="description_favorites_list">Favorites list</string>
    <string name="description_remove_favorite">Do you want to remove the station?</string>
    <string name="hint_search">Search for a station</string>
    <string name="button_category">Category</string>
    <string name="button_remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="description_station_image">Station image</string>
    <string name="description_selector">Select station</string>
    <string name="description_search_station">Search for channels!</string>
    <string name="hint_comment">Comment:</string>
    <string name="hint_name">Name:</string>
    <string name="hint_content">Content:</string>
    <string name="hint_score">Score:</string>

</resources>